--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "paper-kit",
+  "name": "genovision",
   "description": "Bootstrap 4 Now UI Design",
-  "version": "2.2.0",
-  "homepage": "http://creative-tim.com/product/paper-kit",
-  "author": "Creative Tim",
-  "license": "Creative Tim License <www.creative-tim.com/license>",
+  "version": "1.0.0",
+  "homepage": "http://data-co-lab.com",
+  "author": "Data Co-Lab",
+  "license": "",
   "devDependencies": {
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^5.0.0",
